tests/fixtures/invalid/pow_none_bytes_list.py
# Cannot call pow() with None, Bytes, List[int]
x = pow(None, b"hello", [1, 2, 3])
